# templates

./: flake.nix
ghc910/: TEMPLATE.cabal  flake.nix
ghc912/: flake.nix
ghc94/: TEMPLATE.cabal  flake.nix
ghc96/: TEMPLATE.cabal  flake.nix
ghc98/: TEMPLATE.cabal  flake.nix
servant-typescript/server/: README.md  flake.nix
servant-typescript/web/: README.md  flake.nix  package.json  tsconfig.json
servant-typescript/web/html/: index.html
